<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MarioBit</string>

    <string name="start">START</string>
    <string name="start_hint">Во вселенной Марио\nесть не только Марио ;)</string>

    <string name="scan_process_hint">Наведите камеру на QR-код</string>
    <string name="scan_process_label">Поиск…</string>

    <string name="success">Успех!!!</string>
    <string name="failed">Неудача :(</string>
    <string name="complete">COMPLETE</string>
    <string name="play">Проиграть</string>
    <string name="hint">Описание</string>

    <string name="mario_looped">Марио</string>
    <string name="mario_looped_hint" formatted="false">Марио – это персонаж на основании, которого строился весь основной состав героев. Он присутствовал в каждой игре, все начиналось с него. Любому совершенно очевидно, что если бы Марио не существовало, то ни одной из его игр бы просто не существовало. Это в свою очередь означает, что ни одного из персонажей игр Марио так же бы не существовало</string>

    <string name="peach">Принцесса Пич</string>
    <string name="peach_hint" formatted="false">Принцесса Пич возглавляет Грибное Королевство. Насколько мне известно, она встречается почти в каждой игре Марио. Иногда ее похищают ужасные злодеи, в числе которых всем известный Боузер, он держит ее в своей крепости и прячет от Марио. Конечно, данный персонаж пользуется большой популярностью, в чем ее заслуга? Ответ на данный вопрос настолько прост и очевиден, что на него сможет ответить даже 3-летний ребенок. Принцесса Пич является той единственной, ради спасения которой придумана игра Марио. Почти во всех частях игр про Марио спасение принцессы является основной целью! Что это тогда будет за игра без спасения принцессы!?</string>

    <string name="starman_looped">Тоад</string>
    <string name="starman_looped_hint" formatted="false">Это маленький гриб, являющийся одним из многочисленных слуг принцессы Пич. Для некоторых, он выглядит очень веселым и очаровательным, для других, он кажется немного сумасшедшим, который говорит вам, что Принцесса Пич не там где вы ее ищете, когда вы уже, казалось бы, дошли до конца замка Боузера.  Давайте же посмотрим правде в глаза, если бы не было Тоада в игре, кто бы вам говорил о том, что принцессы здесь нет и сбивал вас с толку? Как вы собираетесь спасать принцессу, если вы даже не знаете где она. С другой стороны фраза о том, что принцесса прямо здесь, может вызвать у людей гнев.</string>

    <string name="underworld_looped">Гумба</string>
    <string name="underworld_looped_hint" formatted="false">Гумба является главным маленьким злодеем практически в любой из игр о Марио (кроме игры DonkeyKong). Другими словами, Гумба - это двуногий гриб с перевернутыми клыками. Что же в нем интересного: маленький, слабый, бессмысленный, вызывающий даже небольшое раздражение отрицательный персонаж? Вы должны понимать, что Гумба является одним из главных злодеев в большинстве игр о Марио. Гумба постоянно встает на пути к спасению принцессы на протяжении всего приключения, но как же без этого? Разве будет интересным приключение, когда нет никаких препятствий?</string>

    <string name="hurry_underwater_looped">Лакиту</string>
    <string name="hurry_underwater_looped_hint" formatted="false">Лакиту - это маленькое существо (чем-то похожее на черепах купа), сидящее на облаке и наблюдающее за происходящим сверху. Так что же делает его таким особенным? Обычно он вызывает раздражение, так как сидя на облаке, кидает вниз колючие шарики, превращающиеся в дракончиков Spinies при касании земли! Ну, если честно, я соглашусь, что Лакиту это одна сплошная «головная боль»! Хотя в играх SuperMario 64 и MarioKart он уже не бросает в вас колючие шарики, а выступает в роли оператора, снимающего на камеру игровой процесс.</string>

    <string name="bowser_looped">Боузер</string>
    <string name="bowser_looped_hint" formatted="false">Боузер, как известно, является главным злодеем среди большинства игр Марио. Причина, почему он так важен, предельно ясна. Когда были получены результаты тестирования среди детей дошкольного возраста, 18% из 100% назвали данного героя (как такие результаты получились, я понятия не имею) злодей. Только представьте себе игру Марио без главного злодея. Это было бы похоже на попытку защитить принцессу, но непонятно от кого. Я не представляю себе, как она может быть похищена из ничего, и я также не вижу, как может Марио спасать ее, если она даже не была никем похищена.</string>

    <string name="victory" formatted="false">Над проектом работали</string>
    <string name="victory_hint" formatted="false">Склеили: \n    • Оксана Вахрушева\n    • Гульнара Плотникова\n    • Наталия Ярославцева\n\n    Запасхалили:\n    • Алексей Решетников\n    • Альберт Салихов\n    • Настя Егорова\n\n    Создатели игры:\n    • компания Nintendo\n    </string>

    <string name="dead">Кажется, вас кто-то съел…</string>
</resources>