<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_success"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|bottom"
    android:orientation="vertical"
    tools:context="ru.taximaster.mariobit.ui.SuccessActivity"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom|right"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon" />

            <ImageView
                android:id="@+id/iv_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/imageView"
                android:contentDescription="@string/hint"
                android:src="@android:drawable/ic_dialog_info" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/mario_looped" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/play"
        android:padding="10dp"
        android:src="@android:drawable/ic_media_play" />

    <Button
        android:id="@+id/btn_complete"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete" />

</LinearLayout>
